added ef core and azure sql db connection

--- a/appsettings.json
+++ b/appsettings.json
@@ -9,5 +9,6 @@
   "ApplicationInsights": {
     "ConnectionString": "InstrumentationKey=8c81d0aa-9bc8-4b98-8ad9-c8e85e59cbfb;IngestionEndpoint=https://australiacentral-0.in.applicationinsights.azure.com/;LiveEndpoint=https://australiacentral.livediagnostics.monitor.azure.com/;ApplicationId=a7c499ba-8ba1-40d1-bdde-1d8478827e4d"
   },
-  "Greeting": "Greeting from configuration"
+  "Greeting": "Greeting from configuration",
+  "ConnectionStrings": {}
 }
